Was able to print out temperature from on click

--- a/windmill-weather/package.json
+++ b/windmill-weather/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tailwindwatch": "npx tailwindcss -i ./src/index.css -o ./src/output.css --watch"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
