--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "tailwindwatch": "npx tailwindcss -i ./src/index.css -o ./src/output.css --watch",
-    "build": "npx tailwindcss -i ./src/index.css -o ./src/output.css && "
+    "build": "npx tailwindcss -i ./src/input.css -o ./dist/output.css && tsc"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
