--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "tailwindwatch": "npx tailwindcss -i ./src/index.css -o ./src/output.css --watch",
-    "build": "npx tailwindcss -i ./src/input.css -o ./dist/output.css && tsc"
+    "start": "parcel",
+    "build": "parcel build"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "parcel": "latest",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.15",
     "typescript": "^4.4.4"
