--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.15",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "date-fns": "^2.28.0"
   }
 }
