--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "autoprefixer": "^10.4.2",
     "parcel": "latest",
     "postcss": "^8.4.5",
+    "process": "^0.11.10",
     "tailwindcss": "^3.0.15",
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@tomtom-international/web-sdk-plugin-searchbox": "^3.1.12",
     "date-fns": "^2.28.0"
   }
 }
