--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "parcel build"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
     "autoprefixer": "^10.4.2",
     "parcel": "latest",
     "postcss": "^8.4.5",
