--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "autoprefixer": "^10.4.2",
+    "jest": "^28.1.0",
     "parcel": "latest",
     "postcss": "^8.4.5",
     "process": "^0.11.10",
